--- a/.project
+++ b/.project
@@ -14,4 +14,11 @@
 	<natures>
 		<nature>org.eclipse.texlipse.builder.TexlipseNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>.tex</name>
+			<type>1</type>
+			<location>C:/Program Files/MiKTeX/tex/latex/tools/.tex</location>
+		</link>
+	</linkedResources>
 </projectDescription>
